[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/MenuPrincipal/Mesh/dikhololo_night_2k.hdr" type="Texture" id=1]
[ext_resource path="res://Scenes/MenuPrincipal/Mesh/MenuPrincipal_Mesh.escn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Font/CatChild_titre_128.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/MenuPrincipal/MenuPrincipal.gd" type="Script" id=4]
[ext_resource path="res://Assets/Font/CatChild_base_12.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Font/CatChild_base_48.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Camera/Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MenuPrincipal/PanelJouer.tscn" type="PackedScene" id=8]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="MenuPrincipal" type="Node"]
script = ExtResource( 4 )
musiquePath = "res://Assets/Songs/teller-of-the-tales-kevin-macleod.ogg"

[node name="3dRoot" type="Spatial" parent="."]

[node name="Mesh" type="Spatial" parent="3dRoot"]

[node name="MenuPrincipal_Mesh" parent="3dRoot/Mesh" instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="3dRoot/Mesh"]
environment = SubResource( 2 )

[node name="Lights" type="Spatial" parent="3dRoot/Mesh"]

[node name="DirectionalLight" type="DirectionalLight" parent="3dRoot/Mesh/Lights"]
transform = Transform( 0.763383, -0.465824, 0.447497, 0.100073, 0.769702, 0.630511, -0.638147, -0.436539, 0.634194, 3.85164, 19.7204, 10.601 )
light_color = Color( 1, 0.8, 0.588235, 1 )
shadow_enabled = true

[node name="OmniLight" type="OmniLight" parent="3dRoot/Mesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.424776, 2.33674, -15.4284 )
light_color = Color( 0.898039, 0.47451, 1, 1 )
light_energy = 2.0
omni_range = 10.0
omni_attenuation = 1.62451

[node name="OmniLight2" type="OmniLight" parent="3dRoot/Mesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99827, 2.84939, 15.3904 )
light_color = Color( 0.47451, 1, 0.505882, 1 )
light_energy = 2.0
omni_range = 10.0
omni_attenuation = 1.62451

[node name="OmniLight3" type="OmniLight" parent="3dRoot/Mesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.5687, 2.33674, 8.63762 )
light_color = Color( 0.898039, 0.47451, 1, 1 )
light_energy = 2.0
omni_range = 10.0
omni_attenuation = 1.62451

[node name="OmniLight4" type="OmniLight" parent="3dRoot/Mesh/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5024, 2.36638, 10.4355 )
light_color = Color( 0.898039, 0.47451, 1, 1 )
light_energy = 2.0
omni_range = 10.0
omni_attenuation = 1.62451

[node name="CamRoot" type="Spatial" parent="3dRoot"]

[node name="Camera2" parent="3dRoot/CamRoot" instance=ExtResource( 7 )]
transform = Transform( 0.850453, 0.070802, 0.521264, 0, 0.990901, -0.134592, -0.526051, 0.114464, 0.842715, 4.912, 0.922, 6.588 )

[node name="Ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutCopyright" type="VBoxContainer" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/LayoutCopyright"]
margin_top = 686.0
margin_right = 1280.0
margin_bottom = 701.0
alignment = 2

[node name="Copyright" type="Label" parent="Ui/LayoutCopyright/HBoxContainer"]
margin_left = 631.0
margin_right = 1256.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "Illustrations tirées du jeu Dixit Origins. Un jeu de Jean-Louis Roubira, illustré par Clément Lefèvre et édité par Libellud.©"

[node name="VSeparator" type="VSeparator" parent="Ui/LayoutCopyright/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 15.0
rect_min_size = Vector2( 20, 0 )

[node name="HSeparator4" type="HSeparator" parent="Ui/LayoutCopyright"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 705.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 15 )

[node name="LayoutTitre" type="VBoxContainer" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Ui/LayoutTitre"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/LayoutTitre"]
margin_top = 19.0
margin_right = 1280.0
margin_bottom = 57.0

[node name="VSeparator" type="VSeparator" parent="Ui/LayoutTitre/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 50.0
margin_bottom = 38.0
rect_min_size = Vector2( 50, 0 )

[node name="Titre" type="Label" parent="Ui/LayoutTitre/HBoxContainer"]
margin_left = 54.0
margin_right = 174.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Dixit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutBoutons" type="VBoxContainer" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/LayoutBoutons"]
margin_top = 143.0
margin_right = 1280.0
margin_bottom = 576.0

[node name="VSeparator2" type="VSeparator" parent="Ui/LayoutBoutons/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 75.0
margin_bottom = 433.0
rect_min_size = Vector2( 75, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/LayoutBoutons/HBoxContainer"]
margin_left = 79.0
margin_right = 225.0
margin_bottom = 433.0
alignment = 1

[node name="HSeparator4" type="HSeparator" parent="Ui/LayoutBoutons/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 146.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )

[node name="BtnJouer" type="Button" parent="Ui/LayoutBoutons/HBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 146.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 6 )
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Ui/LayoutBoutons/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 194.0
margin_right = 146.0
margin_bottom = 209.0
rect_min_size = Vector2( 0, 15 )

[node name="BtnOptions" type="Button" parent="Ui/LayoutBoutons/HBoxContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 146.0
margin_bottom = 279.0
custom_fonts/font = ExtResource( 6 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="Ui/LayoutBoutons/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 283.0
margin_right = 146.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 80 )

[node name="BtnQuit" type="Button" parent="Ui/LayoutBoutons/HBoxContainer/VBoxContainer"]
margin_top = 367.0
margin_right = 146.0
margin_bottom = 433.0
custom_fonts/font = ExtResource( 6 )
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutPanelJouer" type="VBoxContainer" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/LayoutPanelJouer"]
margin_top = 90.0
margin_right = 1280.0
margin_bottom = 630.0
alignment = 1

[node name="PanelJouer" parent="Ui/LayoutPanelJouer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 190.0
margin_right = 1090.0

[connection signal="pressed" from="Ui/LayoutBoutons/HBoxContainer/VBoxContainer/BtnJouer" to="." method="_on_BtnJouer_pressed"]
[connection signal="pressed" from="Ui/LayoutBoutons/HBoxContainer/VBoxContainer/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="pressed" from="Ui/LayoutBoutons/HBoxContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
